--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "body-parser": "^1.13.3",
     "bootstrap": "^3.3.5",
     "express": "^4.13.3",
+    "grunt-contrib-clean": "^0.6.0",
+    "jade": "^1.11.0",
     "jquery": "^2.1.4",
-    "mongodb": "^2.0.43"
+    "mongodb": "^2.0.43",
+    "mongoose": "^4.1.7"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bower-concat": "^0.5.0",
+    "grunt-contrib-uglify": "^0.9.2",
+    "load-grunt-tasks": "^3.2.0"
   }
 }
