Hope this helps

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.13.3",
     "bootstrap": "^3.3.5",
     "express": "^4.13.3",
+    "express-handlebars": "^2.0.1",
     "grunt-contrib-clean": "^0.6.0",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
