--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "hbs": "^3.1.1",
     "jquery": "^2.1.4",
     "mongodb": "^2.0.43",
-    "mongoose": "^4.1.7"
+    "mongoose": "^4.1.7",
+    "nodemailer": "^1.4.0",
+    "nodemailer-mandrill-transport": "^0.3.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
